@@ -225,4 +225,4 @@ RenderRubyRun* RenderRubyRun::staticCreateRubyRun(const RenderObject* parentRuby
 
 } // namespace WebCore
 
-#endif
+#endif // ENABLE(RUBY)
