@@ -1,3 +1,12 @@
+2010-02-14  Kent Tamura  <tkent@chromium.org>
+
+        No review. Touch RenderRuny*.cpp to fix Chromium/Windows build bot.
+
+        * rendering/RenderRuby.cpp: Add a comment for #endf.
+        * rendering/RenderRubyBase.cpp: Add a comment for #endf.
+        * rendering/RenderRubyRun.cpp: Add a comment for #endf.
+        * rendering/RenderRubyText.cpp: Add a comment for #endf.
+
 2010-02-13  Pavel Feldman  <pfeldman@chromium.org>
 
         Reviewed by Timothy Hatcher.
